storage api test ok
